# portpolio

./: .env.example  .gitattributes  .gitignore  20260314-project-setup.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Plans.md  agent-workflow.md  check_layers.py  core-beliefs.md  cpp-style.md  doc_check.py  opencode.json  overview.md  tooling.md  vcpkg.json
.claude/: hooks.json  settings.json  settings.local.json
Lib/: .clangd  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
Lib/docs/: INDEX.md  context-map.md
Lib/docs/exec-plans/active/: 20260316-not-null-utility.md  20260317-assert-utility.md  20260317-utility-functions.md  20260330-session-send-queue-correction.md  INDEX.md
Lib/docs/exec-plans/active/completed/: 20260328-strongly-typed-id-helper.md
Lib/docs/exec-plans/completed/: 20260316-not-null-utility.md  20260328-connect-lib-to-server.md  20260330-network-acceptor.md  20260330-session-network-fixes.md  INDEX.md
Lib/include/: README.md  singleton.h
Lib/include/network/: acceptor.cpp  acceptor.h  connector.cpp  connector.h  const_def.h  io_handler.cpp  io_handler.h  packet.cpp  packet.h  session.cpp  session.h
Lib/include/types/: not_null.h  strong_id.h  type_def.h
Lib/include/utils/: game_random.h  random_utils.h  string_utils.h
Lib/src/: README.md
Lib/tests/types/: not_null_test.cpp  strong_id_test.cpp
Lib/tests/utils/: game_random_test.cpp  string_utils_test.cpp
_workspace/: command-log.jsonl  (+2 more)
server/: .clang-format  .clang-tidy  .clangd  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
server/data/: server.json
server/data/monsters/: README.md
server/data/skills/: README.md
server/docs/: INDEX.md  context-map.md
server/docs/architecture/: dependencies.md  layers.md
server/docs/conventions/: cpp-style.md  tooling.md
server/docs/design/: core-beliefs.md  overview.md  session-close-packet-ordering.md  session-design.md  session-ownership-and-handler-registration.md
server/docs/exec-plans/active/: 20260314-project-setup.md  20260315-monorepo-server-move.md  20260316-exec-plan-gate-and-skill.md  20260316-session-class-architecture.md  20260317-add-utility-classes.md  20260413-job-system-interface-spec.md  20260413-job-system-redesign.md  20260414-boost-mysql-user-db-executor.md  20260414-login-move-sync-protocol.md  20260415-telemetry-recorders.md  20260416-boost-asio-network-library.md  INDEX.md
server/docs/exec-plans/completed/: 20260328-connect-lib-to-server.md  20260330-shared-data-schema-codegen.md  20260330-shared-protocol-codegen-build-hook.md  20260414-boost-mysql-user-db-executor.md
server/docs/quality/: grades.md
server/docs/reference/: project-layout.md
server/docs/workflow/: agent-workflow.md  build-troubleshooting.md  verification.md
server/lib/: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  README.md
server/lib/docs/: INDEX.md  context-map.md  network-session-interface.md
server/lib/docs/exec-plans/active/: 20260415-network-session.md  INDEX.md
server/lib/docs/exec-plans/completed/: 20260328-fixed-width-integer-types.md  INDEX.md
server/lib/include/: job_queue_impl_thoughts.md  singleton.h
server/lib/include/clock/: clock.h  manual_clock.h  steady_clock.h  steady_tick_clock.h
server/lib/include/job/: README.md  entry.h  executor.h  job-refactor-log.md  job.h  job_entry.h  job_handle.h  job_queue.h  job_queue_helper.h  job_queue_types.h  thread_pool_executor.h  timer.h  timer_entry.h
server/lib/include/telemetry/: histogram.h  latency_summary.h  rate.h  rate_stats.h
server/lib/include/types/: not_null.h  strong_id.h
server/lib/include/utils/: atomic_util.h  container_utils.h  game_random.h  random_utils.h  string_utils.h
server/lib/tests/: README.md
server/lib/tests/clock/: clock_test.cpp
server/lib/tests/types/: not_null_test.cpp  strong_id_test.cpp
server/lib/tests/utils/: container_utils_test.cpp  game_random_test.cpp  random_utils_test.cpp  string_utils_test.cpp
server/src/: main.h
server/src/01_types/: content_id.h  content_id_helper.cpp  content_id_helper.h  entity_id.h  type_def.h
server/src/02_config/: server_config.h
server/src/03_core/: AGENTS.md
server/src/03_core/User/: user.cpp  user.h
server/src/03_core/combat/: combat_system.h
server/src/03_core/inventory/: inventory_manager.cpp
server/src/03_core/item/: dye.cpp  dye.h  equipments.cpp  equipments.h  inventory.cpp  inventory.h  inventory_helper.cpp  inventory_helper.h  item.cpp  item.h
server/src/03_core/stat/: stat_calculator.h
server/src/04_service/: AGENTS.md
server/src/04_service/dungeon/: dungeon_instance.cpp
server/src/05_network/: AGENTS.md  connection.cpp  connection.h
server/src/05_network/aoi/: aoi_grid.cpp
server/src/05_network/packet/: packet_handler.cpp  packet_handler.h
server/src/05_network/packet_handler/: packet_handler.h
server/src/05_network/session/: session_manager.cpp  session_manager.h
server/src/06_runtime/: server_app.cpp  server_app.h
server/src/common/: content_id.h  content_id_helper.h  entity_id.h  type_def.h
server/src/config/: server_config.cpp  server_config.h
server/src/database/: db_executor.cpp  db_executor.h  i_query.h
server/src/item/: dye.h  equipment_service.cpp  equipment_service.h  equipments.h  inventory.cpp  inventory.h  inventory_helper.h  item.cpp  item.h
server/src/network/: connection.cpp  connection.h  listener.cpp  listener.h  network_service.cpp  network_service.h  packet.h  packet_header.h  recv_buffer.h  session.cpp  session.h
server/src/network/packet_handler/: packet_handler.h
server/src/tracing/: tracing.cpp  tracing.h
server/src/user/: user.cpp  user.h
server/tests/: AGENTS.md
server/tests/unit/: scaffold_smoke_test.cpp
server/tools/: AGENTS.md  check_encoding.py  check_layers.py  doc_check.py  requirements.txt
server/tools/codegen/: combat_data_gen.py  env_utils.py  game_data_gen.py  packet_gen.py
server/tools/codegen/templates/: server_enums.h.j2  server_manifest.h.j2  server_table.h.j2  server_table_common.h.j2  unreal_enums.h.j2  unreal_manifest.h.j2  unreal_table.h.j2
(+462 files in other folders)
